# ext4

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  common.h  defines.h  ext4-mount.cmake  main.c
app/fops/: ext4-fops.cmake  op-getattr.c  op-init.c  op-open.c  op-read.c  op-readdir.c  op-readlink.c
app/fs/: dcache.c  dcache.h  ext4-fs.cmake  extents.h  inode.h  logging.h  super.c
app/ops/: do-check.c  do-fill-stat-buf.c  do-kill-file-by-inode.c  do-probe.c  do-read-inode.c  do-write-inode.c  op-access.c  op-chmod.c  op-create.c  op-destroy.c  op-fget-attr.c  op-flush.c  op-fsync.c  op-getattr.c  op-getxattr.c  op-init.c  op-link.c  op-mkdir.c  op-mknod.c  op-open.c  op-read-dir.c  op-read-link.c  op-read.c  op-release.c  op-rename.c  op-rmdir.c  op-statfs.c  op-symlink.c  op-truncate.c  op-unlink.c  op-utimens.c  op-write.c
app/types/: ext4-dentry.h  ext4-extents.h  ext4-inode.h  ext4-super.h  ext4-types.cmake
test/: CMakeLists.txt  fuse-main.c
